--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
 /* @import-normalize;
 
-body {
+/* body {
+  
   font-family: "Yeseva One";
-}
+} */
 * {
+
+
   margin: 0;
   padding: 0;
   border: none;
